@@ -531,10 +531,10 @@ public class RawRankProfile {
                 properties.add(new Pair<>("vespa.matching.filter_threshold", String.valueOf(filterThreshold.getAsDouble())));
             }
             for (var fieldAndThreshold : explicitFieldRankFilterThresholds.entrySet()) {
-                properties.add(new Pair<>("vespa.matching.filter_threshold.%s".formatted(fieldAndThreshold.getKey()), String.valueOf(fieldAndThreshold.getValue())));
+                properties.add(new Pair<>(String.format(java.util.Locale.ROOT, "vespa.matching.filter_threshold.%s", fieldAndThreshold.getKey()), String.valueOf(fieldAndThreshold.getValue())));
             }
             for (var fieldAndElementGap : activeElementGapsPerField.entrySet()) {
-                properties.add(new Pair<>("vespa.matching.element_gap.%s".formatted(fieldAndElementGap.getKey()), fieldAndElementGap.getValue().toString()));
+                properties.add(new Pair<>(String.format(java.util.Locale.ROOT, "vespa.matching.element_gap.%s", fieldAndElementGap.getKey()), fieldAndElementGap.getValue().toString()));
             }
             if (matchPhaseSettings != null) {
                 properties.add(new Pair<>("vespa.matchphase.degradation.attribute", matchPhaseSettings.getAttribute()));
